[SYSTEMDS-3880] Java 17 Federated Runner add-opens